2006-11-27  Don Allingham  <don@gramps-project.org>
	* configure.in: change version number

2006-11-26  Don Allingham  <don@gramps-project.org>
	* 2.2.3 released
	* configure.in: up version number
	* src/GrampsCfg.py: window title
	* src/ColumnOrder.py: window title name
	* src/DisplayState.py: open recent menu copy
	* help/C/gramps.xml: typo fixes
	* po/POTFILES.in: remove unused files
	* src/Merge/_MergePerson.py:  fixed check_for_child function to handle childrefs
	* po/gramps.pot: updated

2006-11-26  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_WriteGedcom.py (write_person): Typo.
	* src/plugins/Check.py (check_for_broken_family_links): Check if
	child is one of the parents.
	* src/GrampsDb/_GrampsBSDDB.py (load): Clean env for a new grdb
	file; do not attempt recovery for a new grdb file.
	* NEWS: Typo.

2006-11-26  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditPlace.py: consistent menu and title names
	* src/Editors/_EditSource.py: consistent menu and title names
	* src/Editors/_EditPerson.py: consistent menu and title names
	* src/Editors/_EditMedia.py: consistent menu and title names
	* src/Editors/_EditRepository.py: consistent menu and title names
	* src/Editors/_EditFamily.py: consistent menu and title names
	* src/Editors/_EditEvent.py: consistent menu and title names
	* src/docgen/ODFDoc.py: fix registration

2006-11-25  Don Allingham  <don@gramps-project.org>
	* src/Config/_GrampsConfigKeys.py: remember window size
	* src/Editors/_EditAddress.py: remember window size
	* src/Editors/_EditSecondary.py: remember window size
	* src/Editors/_EditLdsOrd.py: remember window size
	* src/Editors/_EditReference.py: remember window size
	* src/Editors/_EditUrl.py: remember window size
	* src/Editors/_EditRepoRef.py: remember window size
	* src/Editors/_EditAttribute.py: remember window size
	* src/Editors/_EditPersonRef.py: remember window size
	* src/Editors/_EditLocation.py: remember window size